--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,26 @@
-/*.App {*/
-/*  padding: 30px;*/
-/*  display: flex;*/
-/*}*/
+/*
+.App {
+  padding: 30px;
+  display: flex;
+}
 
-/*.App > div {*/
-/*  margin-right: 50px;*/
-/*}*/
-/*.active-filter {*/
-/*  background-color: cornflowerblue;*/
-/*  color: azure;*/
-/*}*/
+.App > div {
+  margin-right: 50px;
+}
 
-/*.error {*/
-/*  border: 2px solid red;*/
-/*  outline: transparent;*/
-/*}*/
+.error {
+  border: red 1px solid;
+}
 
-/*.error-text {*/
-/*  color: red;*/
-/*}*/
+.error-message {
+  color: red;
+}
 
+.active-filter {
+  background-color: aquamarine;
+}
+
+.is-done {
+  opacity: 0.5;
+}
+*/
